# ml-sdk

./: README.md  pyproject.toml
src/classifiers/: loss_functions.py
src/core/: classifier.py  layers.py  loss_functions.py  optimizers.py
src/examples/: linear_classifier.py
src/preprocessing/: augmentation.py
src/utils/: data_loader.py  hyperparameters.py  training_metrics.py
